Reduce usage of Guava a bit
Only "Preconditions" is remaining now